fix: remove z-index

--- a/static/style/main.css
+++ b/static/style/main.css
@@ -43,7 +43,6 @@ body {
     color: #f8f8f8;
     overflow-x: hidden;
     position: relative;
-    z-index: 0;
 }
 
 main {
@@ -66,7 +65,6 @@ div {
     align-items: center;
     padding: 2rem;
     position: relative;
-    z-index: 2;
     min-height: 95vh;
 }
 
